sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:14: error: illegal start of simple expression
	}
        ^AlgBubbleSort1:17: error: 'while' expected but '}' found.
	}
        ^